--- a/index.html
+++ b/index.html
@@ -235,11 +235,11 @@
     <div class="container-fluid">
         <div class="row justify-content-center">
             <div class="col-12 col-md-10 col-lg-12">
-                <div class="carousel slide carousel-fade" id="udnQh7TzbP" data-ride="carousel" data-bs-ride="carousel" data-interval="3000" data-bs-interval="3000">
+                <div class="carousel slide carousel-fade" id="udnRIst35C" data-ride="carousel" data-bs-ride="carousel" data-interval="3000" data-bs-interval="3000">
                     
                     <ol class="carousel-indicators">
-                        <li data-slide-to="0" data-bs-slide-to="0" class="active" data-target="#udnQh7TzbP" data-bs-target="#udnQh7TzbP"></li><li data-slide-to="1" data-bs-slide-to="1" class="" data-target="#udnQh7TzbP" data-bs-target="#udnQh7TzbP"></li>
-                        <li data-slide-to="2" data-bs-slide-to="2" data-target="#udnQh7TzbP" data-bs-target="#udnQh7TzbP"></li><li data-slide-to="3" data-bs-slide-to="3" data-target="#udnQh7TzbP" data-bs-target="#udnQh7TzbP"></li>
+                        <li data-slide-to="0" data-bs-slide-to="0" class="active" data-target="#udnRIst35C" data-bs-target="#udnRIst35C"></li><li data-slide-to="1" data-bs-slide-to="1" class="" data-target="#udnRIst35C" data-bs-target="#udnRIst35C"></li>
+                        <li data-slide-to="2" data-bs-slide-to="2" data-target="#udnRIst35C" data-bs-target="#udnRIst35C"></li><li data-slide-to="3" data-bs-slide-to="3" data-target="#udnRIst35C" data-bs-target="#udnRIst35C"></li>
                         
                     </ol>
                     <div class="carousel-inner">
@@ -286,11 +286,11 @@
                             </div>
                         </div>
                     </div>
-                    <a class="carousel-control carousel-control-prev" role="button" data-slide="prev" data-bs-slide="prev" href="#udnQh7TzbP">
+                    <a class="carousel-control carousel-control-prev" role="button" data-slide="prev" data-bs-slide="prev" href="#udnRIst35C">
                         <span class="mobi-mbri mobi-mbri-arrow-prev" aria-hidden="true"></span>
                         <span class="sr-only visually-hidden">Previous</span>
                     </a>
-                    <a class="carousel-control carousel-control-next" role="button" data-slide="next" data-bs-slide="next" href="#udnQh7TzbP">
+                    <a class="carousel-control carousel-control-next" role="button" data-slide="next" data-bs-slide="next" href="#udnRIst35C">
                         <span class="mobi-mbri mobi-mbri-arrow-next" aria-hidden="true"></span>
                         <span class="sr-only visually-hidden">Next</span>
                     </a>
@@ -336,7 +336,7 @@
             </div>
         </div>
     </div>
-</section><section class="display-7" style="padding: 0;align-items: center;justify-content: center;flex-wrap: wrap;    align-content: center;display: flex;position: relative;height: 4rem;"><a href="https://mobiri.se/3208026" style="flex: 1 1;height: 4rem;position: absolute;width: 100%;z-index: 1;"><img alt="" style="height: 4rem;" src="data:image/gif;base64,R0lGODlhAQABAIAAAP///wAAACH5BAEAAAAALAAAAAABAAEAAAICRAEAOw=="></a><p style="margin: 0;text-align: center;" class="display-7">&#8204;</p><a style="z-index:1" href="https://mobirise.com/drag-drop-website-builder.html">Drag and Drop Website Builder</a></section><script src="assets/bootstrap/js/bootstrap.bundle.min.js"></script>  <script src="assets/parallax/jarallax.js"></script>  <script src="assets/smoothscroll/smooth-scroll.js"></script>  <script src="assets/ytplayer/index.js"></script>  <script src="assets/vimeoplayer/player.js"></script>  <script src="assets/embla/embla.min.js"></script>  <script src="assets/embla/script.js"></script>  <script src="assets/dropdown/js/navbar-dropdown.js"></script>  <script src="assets/theme/js/script.js"></script>  
+</section><section class="display-7" style="padding: 0;align-items: center;justify-content: center;flex-wrap: wrap;    align-content: center;display: flex;position: relative;height: 4rem;"><a href="https://mobiri.se/3208026" style="flex: 1 1;height: 4rem;position: absolute;width: 100%;z-index: 1;"><img alt="" style="height: 4rem;" src="data:image/gif;base64,R0lGODlhAQABAIAAAP///wAAACH5BAEAAAAALAAAAAABAAEAAAICRAEAOw=="></a><p style="margin: 0;text-align: center;" class="display-7">&#8204;</p><a style="z-index:1" href="https://mobirise.com/builder/ai-website-builder.html">Free AI Website Software</a></section><script src="assets/bootstrap/js/bootstrap.bundle.min.js"></script>  <script src="assets/parallax/jarallax.js"></script>  <script src="assets/smoothscroll/smooth-scroll.js"></script>  <script src="assets/ytplayer/index.js"></script>  <script src="assets/vimeoplayer/player.js"></script>  <script src="assets/embla/embla.min.js"></script>  <script src="assets/embla/script.js"></script>  <script src="assets/dropdown/js/navbar-dropdown.js"></script>  <script src="assets/theme/js/script.js"></script>  
   
   
   <input name="animation" type="hidden">
