--- a/index.html
+++ b/index.html
@@ -145,7 +145,7 @@
                                 <h6 class="item-subtitle mbr-fonts-style mt-1 display-7">Filming your content.</h6>
                                 <p class="mbr-text mbr-fonts-style mt-3 display-7">Our one of the main features . We will shoot your desired content with creativity, originality and efficiency<br><br>This Includes -<br><br>-Video/Cinematography<br><br>-Video editing<br><br>- Color , Motion Graphics&nbsp;<br><br>- Sound Editing</p>
                             </div>
-                            <div class="mbr-section-btn item-footer mt-2"><a href="https://wa.me/01994794853" class="btn item-btn btn-info display-7"><font face="Moririse2"><span style="font-size: 24px;">Contact</span></font>&nbsp;</a></div>
+                            <div class="mbr-section-btn item-footer mt-2"><a href="https://wa.me/01994794853" class="btn item-btn btn-info display-7">Contact<span style="font-size: 24px;"></span><font face="Moririse2"></font></a></div>
                         </div>
                     </div><div class="embla__slide slider-image item" style="margin-left: 3rem; margin-right: 3rem;">
                         <div class="slide-content">
@@ -240,11 +240,11 @@
     <div class="container-fluid">
         <div class="row justify-content-center">
             <div class="col-12 col-md-10 col-lg-12">
-                <div class="carousel slide carousel-fade" id="udqAGurTWf" data-ride="carousel" data-bs-ride="carousel" data-interval="3000" data-bs-interval="3000">
+                <div class="carousel slide carousel-fade" id="udqDZ9yHyw" data-ride="carousel" data-bs-ride="carousel" data-interval="3000" data-bs-interval="3000">
                     
                     <ol class="carousel-indicators">
-                        <li data-slide-to="0" data-bs-slide-to="0" class="active" data-target="#udqAGurTWf" data-bs-target="#udqAGurTWf"></li><li data-slide-to="1" data-bs-slide-to="1" class="" data-target="#udqAGurTWf" data-bs-target="#udqAGurTWf"></li>
-                        <li data-slide-to="2" data-bs-slide-to="2" data-target="#udqAGurTWf" data-bs-target="#udqAGurTWf"></li><li data-slide-to="3" data-bs-slide-to="3" data-target="#udqAGurTWf" data-bs-target="#udqAGurTWf"></li>
+                        <li data-slide-to="0" data-bs-slide-to="0" class="active" data-target="#udqDZ9yHyw" data-bs-target="#udqDZ9yHyw"></li><li data-slide-to="1" data-bs-slide-to="1" class="" data-target="#udqDZ9yHyw" data-bs-target="#udqDZ9yHyw"></li>
+                        <li data-slide-to="2" data-bs-slide-to="2" data-target="#udqDZ9yHyw" data-bs-target="#udqDZ9yHyw"></li><li data-slide-to="3" data-bs-slide-to="3" data-target="#udqDZ9yHyw" data-bs-target="#udqDZ9yHyw"></li>
                         
                     </ol>
                     <div class="carousel-inner">
@@ -291,11 +291,11 @@
                             </div>
                         </div>
                     </div>
-                    <a class="carousel-control carousel-control-prev" role="button" data-slide="prev" data-bs-slide="prev" href="#udqAGurTWf">
+                    <a class="carousel-control carousel-control-prev" role="button" data-slide="prev" data-bs-slide="prev" href="#udqDZ9yHyw">
                         <span class="mobi-mbri mobi-mbri-arrow-prev" aria-hidden="true"></span>
                         <span class="sr-only visually-hidden">Previous</span>
                     </a>
-                    <a class="carousel-control carousel-control-next" role="button" data-slide="next" data-bs-slide="next" href="#udqAGurTWf">
+                    <a class="carousel-control carousel-control-next" role="button" data-slide="next" data-bs-slide="next" href="#udqDZ9yHyw">
                         <span class="mobi-mbri mobi-mbri-arrow-next" aria-hidden="true"></span>
                         <span class="sr-only visually-hidden">Next</span>
                     </a>
@@ -341,7 +341,7 @@
             </div>
         </div>
     </div>
-</section><section class="display-7" style="padding: 0;align-items: center;justify-content: center;flex-wrap: wrap;    align-content: center;display: flex;position: relative;height: 4rem;"><a href="https://mobiri.se/3208026" style="flex: 1 1;height: 4rem;position: absolute;width: 100%;z-index: 1;"><img alt="" style="height: 4rem;" src="data:image/gif;base64,R0lGODlhAQABAIAAAP///wAAACH5BAEAAAAALAAAAAABAAEAAAICRAEAOw=="></a><p style="margin: 0;text-align: center;" class="display-7">&#8204;</p><a style="z-index:1" href="https://mobirise.com/builder/ai-website-generator.html">AI Website Generator</a></section><script src="assets/bootstrap/js/bootstrap.bundle.min.js"></script>  <script src="assets/parallax/jarallax.js"></script>  <script src="assets/smoothscroll/smooth-scroll.js"></script>  <script src="assets/ytplayer/index.js"></script>  <script src="assets/vimeoplayer/player.js"></script>  <script src="assets/embla/embla.min.js"></script>  <script src="assets/embla/script.js"></script>  <script src="assets/dropdown/js/navbar-dropdown.js"></script>  <script src="assets/theme/js/script.js"></script>  
+</section><section class="display-7" style="padding: 0;align-items: center;justify-content: center;flex-wrap: wrap;    align-content: center;display: flex;position: relative;height: 4rem;"><a href="https://mobiri.se/3208026" style="flex: 1 1;height: 4rem;position: absolute;width: 100%;z-index: 1;"><img alt="" style="height: 4rem;" src="data:image/gif;base64,R0lGODlhAQABAIAAAP///wAAACH5BAEAAAAALAAAAAABAAEAAAICRAEAOw=="></a><p style="margin: 0;text-align: center;" class="display-7">&#8204;</p><a style="z-index:1" href="https://mobirise.com/builder/ai-website-maker.html">Free AI Website Maker</a></section><script src="assets/bootstrap/js/bootstrap.bundle.min.js"></script>  <script src="assets/parallax/jarallax.js"></script>  <script src="assets/smoothscroll/smooth-scroll.js"></script>  <script src="assets/ytplayer/index.js"></script>  <script src="assets/vimeoplayer/player.js"></script>  <script src="assets/embla/embla.min.js"></script>  <script src="assets/embla/script.js"></script>  <script src="assets/dropdown/js/navbar-dropdown.js"></script>  <script src="assets/theme/js/script.js"></script>  
   
   
   <input name="animation" type="hidden">
