--- a/index.html
+++ b/index.html
@@ -240,11 +240,11 @@
     <div class="container-fluid">
         <div class="row justify-content-center">
             <div class="col-12 col-md-10 col-lg-12">
-                <div class="carousel slide carousel-fade" id="udqNtMbmVy" data-ride="carousel" data-bs-ride="carousel" data-interval="3000" data-bs-interval="3000">
+                <div class="carousel slide carousel-fade" id="udqO7xPHHa" data-ride="carousel" data-bs-ride="carousel" data-interval="3000" data-bs-interval="3000">
                     
                     <ol class="carousel-indicators">
-                        <li data-slide-to="0" data-bs-slide-to="0" class="active" data-target="#udqNtMbmVy" data-bs-target="#udqNtMbmVy"></li><li data-slide-to="1" data-bs-slide-to="1" class="" data-target="#udqNtMbmVy" data-bs-target="#udqNtMbmVy"></li>
-                        <li data-slide-to="2" data-bs-slide-to="2" data-target="#udqNtMbmVy" data-bs-target="#udqNtMbmVy"></li><li data-slide-to="3" data-bs-slide-to="3" data-target="#udqNtMbmVy" data-bs-target="#udqNtMbmVy"></li><li data-slide-to="4" data-bs-slide-to="4" data-target="#udqNtMbmVy" data-bs-target="#udqNtMbmVy"></li>
+                        <li data-slide-to="0" data-bs-slide-to="0" class="active" data-target="#udqO7xPHHa" data-bs-target="#udqO7xPHHa"></li><li data-slide-to="1" data-bs-slide-to="1" class="" data-target="#udqO7xPHHa" data-bs-target="#udqO7xPHHa"></li>
+                        <li data-slide-to="2" data-bs-slide-to="2" data-target="#udqO7xPHHa" data-bs-target="#udqO7xPHHa"></li><li data-slide-to="3" data-bs-slide-to="3" data-target="#udqO7xPHHa" data-bs-target="#udqO7xPHHa"></li><li data-slide-to="4" data-bs-slide-to="4" data-target="#udqO7xPHHa" data-bs-target="#udqO7xPHHa"></li>
                         
                     </ol>
                     <div class="carousel-inner">
@@ -296,11 +296,11 @@
                             <a href="https://www.behance.net/gallery/198558819/Videos" target="true"></a><a href="https://www.behance.net/gallery/198558819/Videos" target="true"></a><a href="https://www.behance.net/gallery/198558819/Videos"><img class="d-block w-100" src="assets/images/cinem2-1900x1069.jpg" alt="" data-slide-to="4" data-bs-slide-to="4"></a></div>
                         </div>
                     </div>
-                    <a class="carousel-control carousel-control-prev" role="button" data-slide="prev" data-bs-slide="prev" href="#udqNtMbmVy">
+                    <a class="carousel-control carousel-control-prev" role="button" data-slide="prev" data-bs-slide="prev" href="#udqO7xPHHa">
                         <span class="mobi-mbri mobi-mbri-arrow-prev" aria-hidden="true"></span>
                         <span class="sr-only visually-hidden">Previous</span>
                     </a>
-                    <a class="carousel-control carousel-control-next" role="button" data-slide="next" data-bs-slide="next" href="#udqNtMbmVy">
+                    <a class="carousel-control carousel-control-next" role="button" data-slide="next" data-bs-slide="next" href="#udqO7xPHHa">
                         <span class="mobi-mbri mobi-mbri-arrow-next" aria-hidden="true"></span>
                         <span class="sr-only visually-hidden">Next</span>
                     </a>
@@ -346,7 +346,7 @@
             </div>
         </div>
     </div>
-</section><section class="display-7" style="padding: 0;align-items: center;justify-content: center;flex-wrap: wrap;    align-content: center;display: flex;position: relative;height: 4rem;"><a href="https://mobiri.se/3208026" style="flex: 1 1;height: 4rem;position: absolute;width: 100%;z-index: 1;"><img alt="" style="height: 4rem;" src="data:image/gif;base64,R0lGODlhAQABAIAAAP///wAAACH5BAEAAAAALAAAAAABAAEAAAICRAEAOw=="></a><p style="margin: 0;text-align: center;" class="display-7">&#8204;</p><a style="z-index:1" href="https://mobirise.com/builder/ai-website-maker.html">AI Website Maker</a></section><script src="assets/bootstrap/js/bootstrap.bundle.min.js"></script>  <script src="assets/parallax/jarallax.js"></script>  <script src="assets/smoothscroll/smooth-scroll.js"></script>  <script src="assets/ytplayer/index.js"></script>  <script src="assets/vimeoplayer/player.js"></script>  <script src="assets/embla/embla.min.js"></script>  <script src="assets/embla/script.js"></script>  <script src="assets/dropdown/js/navbar-dropdown.js"></script>  <script src="assets/theme/js/script.js"></script>  
+</section><section class="display-7" style="padding: 0;align-items: center;justify-content: center;flex-wrap: wrap;    align-content: center;display: flex;position: relative;height: 4rem;"><a href="https://mobiri.se/3208026" style="flex: 1 1;height: 4rem;position: absolute;width: 100%;z-index: 1;"><img alt="" style="height: 4rem;" src="data:image/gif;base64,R0lGODlhAQABAIAAAP///wAAACH5BAEAAAAALAAAAAABAAEAAAICRAEAOw=="></a><p style="margin: 0;text-align: center;" class="display-7">&#8204;</p><a style="z-index:1" href="https://mobirise.com/builder/no-code-website-builder.html">No Code Website Builder</a></section><script src="assets/bootstrap/js/bootstrap.bundle.min.js"></script>  <script src="assets/parallax/jarallax.js"></script>  <script src="assets/smoothscroll/smooth-scroll.js"></script>  <script src="assets/ytplayer/index.js"></script>  <script src="assets/vimeoplayer/player.js"></script>  <script src="assets/embla/embla.min.js"></script>  <script src="assets/embla/script.js"></script>  <script src="assets/dropdown/js/navbar-dropdown.js"></script>  <script src="assets/theme/js/script.js"></script>  
   
   
   <input name="animation" type="hidden">
